[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-ai-agent"
version = "0.1.0"
description = "A plugin-based AI agent framework for DevOps automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DevOps AI Agent Team"}
]
keywords = [
    "ai",
    "agent",
    "devops",
    "automation",
    "llm",
    "kubernetes",
    "docker",
    "terraform",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "tiktoken>=0.5",
]
rag = [
    "langchain>=0.1",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]
vcs = [
    "PyGithub>=2.0",
    "python-gitlab>=4.0",
]
devops = [
    "docker>=6.0",
    "kubernetes>=28.0",
    "terraform>=0.1",
]
api = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic-settings>=2.0",
]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "prometheus-client>=0.19",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26",
]
dev = [
    "devops-ai-agent[llm,rag,vcs,devops,api,cli,observability,test]",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/devops-ai-agent/devops-ai-agent"
Documentation = "https://devops-ai-agent.readthedocs.io"
Repository = "https://github.com/devops-ai-agent/devops-ai-agent"
Issues = "https://github.com/devops-ai-agent/devops-ai-agent/issues"

[project.scripts]
devops-agent = "src.interface.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
